# CBKS

./: .gitignore  CMakeLists.txt  README.md  generate_data.cpp  main.cpp
CBKS/: CMakeLists.txt
CBKS/include/: CPRF.h  CSC_BloomFilter.h  Crypto_Primitives.h  client.h  data_type.h  experiment.h  load_data.h  msg.h  server.h
CBKS/src/: CPRF.cpp  CSC_BloomFilter.cpp  Crypto_Primitives.cpp  MurmurHash3.cpp  client.cpp  experiment.cpp  load_data.cpp  main.cpp  server.cpp  test_func.cpp
PBKS/: CMakeLists.txt
PBKS+/: CMakeLists.txt
PBKS+/include/: BloomFilter.h  CSC_BloomFilter.h  Crypto_Primitives.h  data_type.h  experiment.h  msg.h
PBKS+/src/: CSC_BloomFilter.cpp  Crypto_Primitives.cpp  client.cpp  experiment.cpp  load_data.cpp  main.cpp  server.cpp  test_func.cpp
PBKS/include/: BF_Enc.h  CSC_BloomFilter.h  Crypto_Primitives.h  MurmurHash3.h  experiment.h  load_data.h
PBKS/src/: BF_Enc.cpp  BloomFilter.cpp  CSC_BloomFilter.cpp  Crypto_Primitives.cpp  client.cpp  experiment.cpp  (+1 more)
VFSA/: CMakeLists.txt
VFSA/dataset/: 100K.txt  10K.txt  150K.txt  15K.txt  1K.txt  200K.txt  20K.txt  50K.txt  5K.txt
VFSA/include/: BigInteger.h  MerkleTree.h  MultisetAccumulator.h  Twin_BloomFilter.h  client.h  data_type.h  experiment.h  load_data.h  msg.h  server.h
VFSA/src/: BigInteger.cpp  Crypto_Primitives.cpp  MerkleTree.cpp  MultisetAccumulator.cpp  Twin_BloomFilter.cpp  client.cpp  experiment.cpp  load_data.cpp  main.cpp  server.cpp  test.cpp
dataset/: 100K.txt  10K.txt  150K.txt  200K.txt  50K.txt
include/: CSC_BloomFilter.h  Crypto_Primitives.h  client.h  data_type.h
src/: CSC_BloomFilter.cpp  Crypto_Primitives.cpp  client.cpp  load_data.cpp  main.cpp  server.cpp  test_func.cpp
